#
# wxCmdTools static library
#

SET(CMD_TOOLS_PUBLIC_HEADER_FILES inc/wxCmdTools/wxCmdTool.h)
SET(CMD_TOOLS_PUBLIC_HEADER_FILES src/StdWx.h)
SET(CMD_TOOLS_SOURCE_FILES src/wxCmdTool.cpp)

ADD_LIBRARY(wxCmdTools STATIC
	${CMD_TOOLS_SOURCE_FILES}
	${CMD_TOOLS_HEADER_FILES}
	${CMD_TOOLS_PUBLIC_HEADER_FILES}
)

TARGET_INCLUDE_DIRECTORIES(wxCmdTools INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_PRECOMPILE_HEADERS(wxCmdTools PRIVATE src/StdWx.h)

ConfigureWxWidgetsUsage(wxCmdTools)
ConfigureSourceEncoding(wxCmdTools)

SET_PROPERTY(TARGET wxCmdTools PROPERTY OUTPUT_NAME CmdTools)
SET_PROPERTY(TARGET wxCmdTools PROPERTY FOLDER tool)
